--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,11 @@
     android:orientation="vertical"
     tools:context="com.shian.shianlife.activity.MainActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/zhy_build_order_back" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -53,7 +58,7 @@
                     android:id="@+id/rb_main_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/dimen_60dp"
+
                     android:layout_weight="1"
                     android:button="@null"
                     android:drawableTop="@drawable/ic_bar_order_selector_2"
@@ -66,7 +71,6 @@
                     android:id="@+id/rb_main_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dimen_60dp"
                     android:layout_weight="1"
                     android:button="@null"
                     android:drawableTop="@drawable/ic_bar_find_selector_2"
@@ -110,7 +114,7 @@
                         android:layout_height="@dimen/dimen_40dp"
                         android:layout_alignParentRight="true"
                         android:layout_alignParentTop="true"
-                        android:layout_marginRight="@dimen/dimen_80dp"
+                        android:layout_marginRight="@dimen/dimen_40dp"
                         android:layout_marginTop="@dimen/dimen_1dp"
                         android:background="@drawable/msg_point"
                         android:ems="2"
@@ -133,13 +137,5 @@
         </FrameLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/iv_buildnew"
-        android:layout_width="@dimen/dimen_100dp"
-        android:layout_height="@dimen/dimen_100dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/dimen_28dp"
-        android:src="@drawable/zhy_build_new_order" />
 
 </RelativeLayout>
