--- a/app/src/main/res/layout/item_productdetailrefund_other.xml
+++ b/app/src/main/res/layout/item_productdetailrefund_other.xml
@@ -44,11 +44,11 @@
                 android:text="货号" />
 
             <TextView
-                android:layout_marginRight="@dimen/dimen_32dp"
                 android:id="@+id/tv_huohao"
                 style="@style/order_detail_productTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dimen_32dp"
                 android:gravity="right"
                 android:text="" />
         </LinearLayout>
@@ -67,10 +67,10 @@
 
             <TextView
                 android:id="@+id/tv_unit"
-                android:layout_marginRight="@dimen/dimen_32dp"
                 style="@style/order_detail_productTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dimen_32dp"
                 android:gravity="right"
                 android:text="" />
         </LinearLayout>
@@ -89,10 +89,10 @@
 
             <TextView
                 android:id="@+id/tv_danjia"
-                android:layout_marginRight="@dimen/dimen_32dp"
                 style="@style/order_detail_productTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dimen_32dp"
                 android:gravity="right"
                 android:text="" />
         </LinearLayout>
@@ -111,10 +111,10 @@
 
             <TextView
                 android:id="@+id/tv_money"
-                android:layout_marginRight="@dimen/dimen_32dp"
                 style="@style/order_detail_productTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dimen_32dp"
                 android:gravity="right"
                 android:text="" />
         </LinearLayout>
@@ -126,13 +126,29 @@
         android:background="@color/white"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_num"
-            style="@style/order_detail_productTextStyle1"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/dimen_80dp"
-            android:layout_marginLeft="@dimen/dimen_32dp"
-            android:text="已服务数量" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/order_detail_productTextStyle1"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_80dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:layout_weight="1"
+                android:text="已服务数量" />
+
+            <TextView
+                android:layout_marginRight="@dimen/dimen_32dp"
+                android:id="@+id/tv_num"
+                style="@style/order_detail_productTextStyle1"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_80dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:text="" />
+        </LinearLayout>
+
 
         <TextView
             android:layout_width="match_parent"
@@ -198,21 +214,22 @@
         </LinearLayout>
 
         <EditText
-            android:padding="@dimen/dimen_10dp"
             android:id="@+id/et_reason"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_24dp"
             android:layout_marginLeft="@dimen/dimen_32dp"
             android:layout_marginRight="@dimen/dimen_32dp"
             android:background="@drawable/zhy_edit_back_1"
             android:gravity="top"
             android:hint="请填写退款理由"
             android:minHeight="@dimen/dimen_150dp"
-            android:layout_marginBottom="@dimen/dimen_24dp"
+            android:padding="@dimen/dimen_10dp"
             android:textSize="@dimen/dimen_24dp" />
     </LinearLayout>
+
     <TextView
-        android:background="@color/zhy_backgroud_1"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_24dp" />
+        android:layout_height="@dimen/dimen_24dp"
+        android:background="@color/zhy_backgroud_1" />
 </LinearLayout>
