--- a/app/src/main/res/layout/view_cemetery_qt.xml
+++ b/app/src/main/res/layout/view_cemetery_qt.xml
@@ -21,10 +21,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:visibility="gone"
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/dimen_32dp"
         android:orientation="vertical"
-        android:visibility="gone">
+        >
 
         <ImageView
             android:layout_width="@dimen/dimen_100dp"
