--- a/app/src/main/res/layout/view_funeralsetmealother.xml
+++ b/app/src/main/res/layout/view_funeralsetmealother.xml
@@ -5,14 +5,32 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_80dp"
-        android:gravity="center_vertical"
-        android:paddingLeft="@dimen/dimen_32dp"
-        android:textColor="@color/zhy_text_color_1"
-        android:textSize="@dimen/dimen_28dp" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_weight="1"
+            android:layout_width="@dimen/dimen_0dp"
+            android:layout_height="@dimen/dimen_80dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dimen_32dp"
+            android:textColor="@color/zhy_text_color_1"
+            android:textSize="@dimen/dimen_28dp" />
+
+        <TextView
+            android:layout_marginRight="@dimen/dimen_32dp"
+            android:text="注：请选择和治丧主套餐相同的套餐"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dimen_32dp"
+            android:textColor="@color/zhy_text_color_4"
+            android:textSize="@dimen/dimen_24dp" />
+    </LinearLayout>
+
 
     <TextView
         android:layout_width="match_parent"
