--- a/app/src/main/res/layout/view_mainsetmealother.xml
+++ b/app/src/main/res/layout/view_mainsetmealother.xml
@@ -22,7 +22,6 @@
         android:background="@color/zhy_line_3" />
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_80dp"
         android:gravity="center_vertical"
@@ -89,15 +88,21 @@
     </LinearLayout>
 
 
-    <com.shian.shianlife.view.ScrollListView
-        android:id="@+id/listview_data"
+    <!--<com.shian.shianlife.view.ScrollListView-->
+        <!--android:id="@+id/listview_data"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@color/zhy_backgroud_1"-->
+        <!--android:divider="@null"-->
+        <!--android:dividerHeight="@dimen/dimen_0dp"-->
+        <!--android:scrollbars="none"></com.shian.shianlife.view.ScrollListView>-->
+
+    <LinearLayout
+        android:id="@+id/ll_list"
+        android:background="@color/zhy_backgroud_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/zhy_backgroud_1"
-        android:divider="@null"
-        android:dividerHeight="@dimen/dimen_0dp"
-        android:scrollbars="none"></com.shian.shianlife.view.ScrollListView>
-
+        android:orientation="vertical"></LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
