--- a/app/src/main/res/layout/view_userinfo_point_layout.xml
+++ b/app/src/main/res/layout/view_userinfo_point_layout.xml
@@ -16,6 +16,7 @@
         <ImageView
             android:id="@+id/iv_icon"
             android:layout_width="@dimen/dimen_46dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="@dimen/dimen_8dp"
             android:layout_height="@dimen/dimen_46dp" />
 
