--- a/app/src/main/res/values/widget.xml
+++ b/app/src/main/res/values/widget.xml
@@ -10,7 +10,7 @@
     <style name="orderlist_item_content_textStyle" parent="@android:style/Widget.TextView">
         <item name="android:textColor">@color/zhy_text_color_9</item>
         <item name="android:textSize">@dimen/dimen_24dp</item>
-        <item name="android:singleLine">true</item>
+        <item name="android:singleLine">false</item>
         <item name="android:ellipsize">end</item>
     </style>
 
