--- a/PullToRefresh/src/main/res/layout/pull_to_refresh_header_simple.xml
+++ b/PullToRefresh/src/main/res/layout/pull_to_refresh_header_simple.xml
@@ -17,6 +17,7 @@
             android:layout_gravity="center_horizontal">
 
             <ImageView
+                android:id="@+id/pull_to_refresh_image_other"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
