--- a/app/src/main/res/layout/layout_find_items.xml
+++ b/app/src/main/res/layout/layout_find_items.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/iv_pic"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_180dp"
+        android:layout_height="@dimen/dimen_200dp"
         android:scaleType="fitXY"
         android:src="@drawable/zhy_find_default_icon" />
 
@@ -21,50 +21,66 @@
         android:text="标题"
         android:textSize="@dimen/dimen_24dp" />
 
+    <TextView
+        android:id="@+id/tv_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2014-02-05 12:13"
+        android:textColor="@color/zhy_text_color_2"
+        android:textSize="@dimen/dimen_20dp"></TextView>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="right"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_time"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="2014-02-05 12:13"
-            android:textColor="@color/zhy_text_color_2"
-            android:textSize="@dimen/dimen_20dp"></TextView>
-
-        <ImageView
-            android:id="@+id/iv_collection"
-            android:layout_width="@dimen/dimen_26dp"
-            android:layout_height="@dimen/dimen_26dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="@dimen/dimen_6dp"
-            android:src="@drawable/zhy_find_collection_1" />
-
-        <TextView
-            android:id="@+id/tv_collection"
+        <LinearLayout
+            android:id="@+id/ll_collection"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/dimen_30dp"
-            android:text="0"
-            android:textColor="@color/zhy_text_color_2" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/iv_praise"
-            android:layout_width="@dimen/dimen_26dp"
-            android:layout_height="@dimen/dimen_26dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="@dimen/dimen_6dp"
-            android:src="@drawable/zhy_find_praise_1" />
+            <ImageView
+                android:id="@+id/iv_collection"
+                android:layout_width="@dimen/dimen_26dp"
+                android:layout_height="@dimen/dimen_26dp"
+                android:layout_gravity="center"
+                android:layout_marginRight="@dimen/dimen_6dp"
+                android:src="@drawable/zhy_find_collection_1" />
 
-        <TextView
-            android:id="@+id/tv_praise"
+            <TextView
+                android:id="@+id/tv_collection"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dimen_30dp"
+                android:text="0"
+                android:textColor="@color/zhy_text_color_2" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_praise"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:textColor="@color/zhy_text_color_2" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_praise"
+                android:layout_width="@dimen/dimen_26dp"
+                android:layout_height="@dimen/dimen_26dp"
+                android:layout_gravity="center"
+                android:layout_marginRight="@dimen/dimen_6dp"
+                android:src="@drawable/zhy_find_praise_1" />
+
+            <TextView
+                android:id="@+id/tv_praise"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textColor="@color/zhy_text_color_2" />
+        </LinearLayout>
+
 
     </LinearLayout>
 </LinearLayout>
