--- a/app/src/main/res/layout/view_order_qt.xml
+++ b/app/src/main/res/layout/view_order_qt.xml
@@ -75,23 +75,8 @@
         </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 
-
-    <LinearLayout
-        android:id="@+id/ll_build_new"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/dimen_32dp"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/iv_buildnew"
-            android:layout_width="@dimen/dimen_100dp"
-            android:layout_height="@dimen/dimen_100dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="@dimen/dimen_32dp"
-            android:src="@drawable/zhy_build_new_order" />
-    </LinearLayout>
+    <com.shian.shianlife.view.popupbutton.PopupButton
+        android:id="@+id/popupbutton"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.shian.shianlife.view.popupbutton.PopupButton>
 </RelativeLayout>
