--- a/app/src/main/res/layout/fragment_cemetery.xml
+++ b/app/src/main/res/layout/fragment_cemetery.xml
@@ -7,7 +7,7 @@
     <com.viewpagerindicator.TabPageIndicator
         android:id="@+id/indicator"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></com.viewpagerindicator.TabPageIndicator>
+        android:layout_height="@dimen/dimen_66dp"></com.viewpagerindicator.TabPageIndicator>
 
 
     <android.support.v4.view.ViewPager
