--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -40,9 +40,12 @@
 
             <TextView
                 android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
+                android:ellipsize="end"
+                android:layout_width="@dimen/dimen_400dp"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:gravity="center"
+                android:lines="1"
                 android:text=""
                 android:textColor="@color/white"
                 android:textSize="@dimen/dimen_32dp" />
