--- a/app/src/main/res/layout/layout_popup_button.xml
+++ b/app/src/main/res/layout/layout_popup_button.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+    <ImageView
+        android:id="@+id/iv_back"
+        android:scaleType="fitXY"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <ImageView
         android:id="@+id/iv_buildnew"
         android:layout_width="@dimen/dimen_100dp"
