--- a/app/src/main/res/layout/zhy_write_mapselect_normal.xml
+++ b/app/src/main/res/layout/zhy_write_mapselect_normal.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dimen_80dp"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="horizontal"
     android:paddingLeft="@dimen/dimen_32dp"
@@ -29,7 +29,7 @@
     <AutoCompleteTextView
         android:id="@+id/auto_textview"
         android:layout_width="@dimen/dimen_0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/dimen_8dp"
         android:layout_weight="1"
         android:background="@null"
