--- a/app/src/main/res/layout/activity_build_new_order.xml
+++ b/app/src/main/res/layout/activity_build_new_order.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:MyViewAttr="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cemetery_bc"
+    android:background="@color/zhy_backgroud_1"
     android:scrollbars="none"
     tools:context="com.shian.shianlife.activity.cemetery.BuildNewOrderActivity">
 
@@ -12,148 +13,98 @@
         android:id="@+id/activity_build_new_order"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical"
         tools:context="com.shian.shianlife.activity.cemetery.BuildNewOrderActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/dimen_25dp"
-            android:paddingLeft="@dimen/dimen_35dp"
-            android:paddingRight="@dimen/dimen_35dp"
-            android:paddingTop="@dimen/dimen_25dp">
+            android:orientation="vertical">
 
-            <LinearLayout
+            <com.shian.shianlife.view.writeview.EditTextViewNormal
+                android:id="@+id/write_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dimen_10dp"
-                android:paddingTop="@dimen/dimen_10dp">
-
-                <TextView
-                    style="@style/cemetery_text_style_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="客户姓名：" />
-
-
-                <EditText
-                    android:id="@+id/et_name"
-                    style="@style/cemetery_text_style_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/dimen_80dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_cemetery_item_et_1"
-                    android:padding="@dimen/dimen_20dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dimen_10dp"
-                android:paddingTop="@dimen/dimen_10dp">
-
-                <TextView
-                    style="@style/cemetery_text_style_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="联系电话：" />
-
-                <EditText
-                    android:id="@+id/et_phone"
-                    style="@style/cemetery_text_style_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/dimen_80dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_cemetery_item_et_1"
-                    android:inputType="number"
-                    android:padding="@dimen/dimen_20dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dimen_10dp"
-                android:paddingTop="@dimen/dimen_10dp">
-
-                <TextView
-                    style="@style/cemetery_text_style_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="预约时间：" />
-
-                <TextView
-                    android:id="@+id/tv_time"
-                    style="@style/cemetery_text_style_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/dimen_80dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_cemetery_item_et_1"
-                    android:padding="@dimen/dimen_20dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dimen_10dp"
-                android:paddingTop="@dimen/dimen_10dp">
-
-                <TextView
-                    style="@style/cemetery_text_style_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="参观人数：" />
-
-                <EditText
-                    android:id="@+id/et_num"
-                    style="@style/cemetery_text_style_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/dimen_80dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_cemetery_item_et_1"
-                    android:inputType="number"
-                    android:padding="@dimen/dimen_20dp" />
-            </LinearLayout>
-
-            <com.shian.shianlife.view.CetemeryTextSelectLayoutView
-                android:id="@+id/select_cemeteryname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dimen_10dp"
-                android:layout_marginTop="@dimen/dimen_10dp"></com.shian.shianlife.view.CetemeryTextSelectLayoutView>
-
-            <com.shian.shianlife.view.CetemeryTextSelectLayoutView
-                android:id="@+id/select_traffic"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dimen_10dp"
-                android:layout_marginTop="@dimen/dimen_10dp"></com.shian.shianlife.view.CetemeryTextSelectLayoutView>
+                MyViewAttr:titleName="客户姓名"></com.shian.shianlife.view.writeview.EditTextViewNormal>
 
             <TextView
-                style="@style/cemetery_text_style_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_10dp"
-                android:text="客户地址：" />
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_1dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:background="@color/zhy_line_3" />
 
-            <com.shian.shianlife.view.MapSelectLayoutView
-                android:id="@+id/mapselect"
+            <com.shian.shianlife.view.writeview.EditTextViewNormal
+                android:id="@+id/write_userphone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:tag="1"></com.shian.shianlife.view.MapSelectLayoutView>
+                MyViewAttr:titleName="联系电话"></com.shian.shianlife.view.writeview.EditTextViewNormal>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_1dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:background="@color/zhy_line_3" />
+
+            <com.shian.shianlife.view.writeview.TimeSelectViewNormal
+                android:id="@+id/write_meettime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                MyViewAttr:titleName="预约时间"></com.shian.shianlife.view.writeview.TimeSelectViewNormal>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_1dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:background="@color/zhy_line_3" />
+
+            <com.shian.shianlife.view.writeview.EditTextViewNormal
+                android:id="@+id/write_personnum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                MyViewAttr:titleName="参观人数"></com.shian.shianlife.view.writeview.EditTextViewNormal>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_1dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:background="@color/zhy_line_3" />
+
+            <com.shian.shianlife.view.writeview.SpinnerViewNormal
+                android:id="@+id/write_cemeteryname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                MyViewAttr:titleName="预约参观公墓"></com.shian.shianlife.view.writeview.SpinnerViewNormal>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_1dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:background="@color/zhy_line_3" />
+
+            <com.shian.shianlife.view.writeview.SpinnerViewNormal
+                android:id="@+id/write_traffic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                MyViewAttr:titleName="交通方式"></com.shian.shianlife.view.writeview.SpinnerViewNormal>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_1dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:background="@color/zhy_line_3" />
+
+            <com.shian.shianlife.view.writeview.MapSelectViewNormal
+                android:id="@+id/write_userlocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                MyViewAttr:titleName="客户地址"></com.shian.shianlife.view.writeview.MapSelectViewNormal>
         </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_3dp"
-            android:layout_marginBottom="@dimen/dimen_50dp"
-            android:layout_marginTop="@dimen/dimen_40dp"
-            android:background="@drawable/cemetery_item_line_2" />
+            android:layout_height="@dimen/dimen_1dp"
+            android:background="@color/zhy_line_3" />
 
         <Button
             android:id="@+id/bt_submit"
@@ -161,7 +112,9 @@
             android:layout_width="@dimen/dimen_250dp"
             android:layout_height="@dimen/dimen_80dp"
             android:layout_gravity="center"
-            android:background="@drawable/bg_cemetery_item_button_1"
+            android:layout_marginBottom="@dimen/dimen_32dp"
+            android:layout_marginTop="@dimen/dimen_32dp"
+            android:background="@drawable/zhy_button_state_5"
             android:visibility="gone" />
     </LinearLayout>
 </ScrollView>
