--- a/app/src/main/res/values/widget.xml
+++ b/app/src/main/res/values/widget.xml
@@ -106,5 +106,18 @@
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:gravity">center_vertical</item>
     </style>
-
+    <style name="ListItemTitle" parent="@android:style/Widget.TextView">
+        <item name="android:layout_marginLeft">@dimen/dimen_16dp</item>
+        <item name="android:textColor">@color/dimgray</item>
+        <item name="android:textSize">@dimen/dimen_24dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:ems">6</item>
+    </style>
+    <style name="ListItemContent" parent="@android:style/Widget.TextView">
+        <item name="android:layout_marginLeft">@dimen/dimen_16dp</item>
+        <item name="android:textColor">@color/zhy_text_color_9</item>
+        <item name="android:textSize">@dimen/dimen_24dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_weight">1</item>
+    </style>
 </resources>
